feat: add summary-page

--- a/frontend/components/PasswordInput/PasswordInput.module.css
+++ b/frontend/components/PasswordInput/PasswordInput.module.css
@@ -1,31 +1,34 @@
 .passwordInput {
-  min-height: 44px;
-  box-sizing: border-box;
-  padding: 12px 15px;
-  border-radius: 5px;
-  border: 1px solid var(--grey-500);
-  width: 100%;
-  font-family: var(--TTNorms);
-  font-size: 16px;
-  background-color: transparent;
-  color: var(--grey-600);
-  outline: none;
+	box-sizing: border-box;
+	width: 100%;
+	min-height: 44px;
+	padding: 12px 15px;
+
+	color: var(--grey-600);
+	border: 1px solid var(--grey-500);
+	border-radius: 5px;
+	outline: none;
+	background-color: transparent;
+
+	font-family: var(--TTNorms);
+	font-size: 16px;
 }
 
 .passwordInput__label {
-  position: relative;
-  margin: 0 auto;
-  max-width: 356px;
-  width: 100%;
+	position: relative;
+
+	width: 100%;
+	max-width: 356px;
+	margin: 0 auto;
 }
 
 .passwordInput::placeholder {
-  color: var(--grey-500);
+	color: var(--grey-500);
 }
 
 .passwordInput_type_invalid {
-  color: var(--attention-strong);
-  border: 1px solid var(--attention-strong);
+	color: var(--attention-strong);
+	border: 1px solid var(--attention-strong);
 }
 
 .passwordInput__message {
@@ -48,22 +51,25 @@
 }
 
 .passwordInput__setVisibleBtn {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  height: 20px;
-  width: 20px;
-  position: absolute;
-  right: 15px;
-  top: calc(50% - 22px);
-  background-position: center;
-  background-repeat: no-repeat;
+	position: absolute;
+	top: calc(50% - 22px);
+	right: 15px;
+
+	width: 20px;
+	height: 20px;
+
+	cursor: pointer;
+
+	border: none;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .passwordInput__setVisibleBtn_type_hide {
-  background-image: url(./hide.svg);
+	background-image: url("./hide.svg");
 }
 
 .passwordInput__setVisibleBtn_type_show {
-  background-image: url(./show.svg);
+	background-image: url("./show.svg");
 }
