--- a/frontend/components/Header/Header.module.css
+++ b/frontend/components/Header/Header.module.css
@@ -8,7 +8,7 @@
 	margin: 0 auto;
 	padding: 50px 40px;
 	gap: 60px;
-	grid-template-columns: 70px 1fr auto auto;
+	grid-template-columns: auto 1fr auto auto;
 }
 
 .header__authMenu {
