--- a/frontend/components/ProfileMenu/ProfileMenu.module.css
+++ b/frontend/components/ProfileMenu/ProfileMenu.module.css
@@ -21,8 +21,12 @@
 .profileMenu__userImg {
 	position: relative;
 
+	overflow: hidden;
+
 	width: 40px;
 	height: 40px;
+
+	border-radius: 50%;
 }
 
 .profileMenu__userName {
