--- a/frontend/layouts/AuthLayout/AuthLayout.module.css
+++ b/frontend/layouts/AuthLayout/AuthLayout.module.css
@@ -1,4 +1,4 @@
-.profileLayout__wrapper {
+.authLayout__wrapper {
 	display: grid;
 
 	min-height: 100vh;
@@ -11,7 +11,7 @@
 		"sidemenu body";
 }
 
-.profileLayout__header {
+.authLayout__header {
 	z-index: 1;
 
 	max-width: 1920px;
@@ -23,7 +23,7 @@
 	grid-area: header;
 }
 
-.profileLayout__sideMenu {
+.authLayout__sideMenu {
 	box-shadow: 0 5px 21px 1px rgb(66 61 58 / 18%);
 	grid-area: sidemenu;
 }
