--- a/frontend/components/FileInput/FileInput.module.css
+++ b/frontend/components/FileInput/FileInput.module.css
@@ -28,6 +28,11 @@
 }
 
 .fileInput__wrapper {
+	display: flex;
+	flex-direction: column;
+}
+
+.fileInput__label {
 	box-sizing: border-box;
 	width: 100%;
 	max-width: 495px;
@@ -50,7 +55,7 @@
 	display: block;
 
 	max-width: 356px;
-	min-height: 50px;
+	min-height: 30px;
 	margin: 15px 0 0;
 
 	text-align: left;
@@ -73,4 +78,12 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
+}
+
+.fileInput__fileList {
+	padding: 0;
+	margin: 10px 0px;
+	gap: 10px;
+	display: flex;
+	list-style: none;
 }
