--- a/frontend/components/NewCompanyForm/NewCompanyForm.module.css
+++ b/frontend/components/NewCompanyForm/NewCompanyForm.module.css
@@ -65,3 +65,10 @@ textarea.newCompanyForm__textarea {
 	grid-template-columns: 1fr 1fr;
 	gap: 15px;
 }
+
+.newCompanyForm__error {
+	margin: 0;
+	color: var(--attention-strong);
+	font-size: 14px;
+	font-family: var(--TTNorms);
+}
