--- a/frontend/components/FileInput/FileInput.module.css
+++ b/frontend/components/FileInput/FileInput.module.css
@@ -81,9 +81,11 @@
 }
 
 .fileInput__fileList {
-	padding: 0;
-	margin: 10px 0px;
-	gap: 10px;
 	display: flex;
+
+	margin: 10px 0;
+	padding: 0;
+
 	list-style: none;
+	gap: 10px;
 }
