--- a/frontend/components/ModerationCardList/ModerationCardList.module.css
+++ b/frontend/components/ModerationCardList/ModerationCardList.module.css
@@ -1,6 +1,10 @@
 .cardList {
-	margin: 0;
+	display: grid;
+
+	max-width: 733px;
+	margin: 0 0 35px;
 	padding: 0;
 
 	list-style-type: none;
+	gap: 10px 0;
 }
