--- a/frontend/components/CompanyCardPreview/CompanyCardPreview.module.css
+++ b/frontend/components/CompanyCardPreview/CompanyCardPreview.module.css
@@ -15,7 +15,7 @@
 	grid-template-columns: 20px repeat(3, minmax(100px, 180px)) 22px;
 }
 
-.cardСharacter {
+.card_character {
 	display: flex;
 	overflow: hidden;
 	flex-direction: column;
@@ -36,7 +36,7 @@
 	line-height: 1.24;
 }
 
-.cardСharacterType {
+.card_characterType {
 	overflow: hidden;
 
 	max-width: 180px;
@@ -52,12 +52,28 @@
 	line-height: 15px;
 }
 
-.cardIdentifier {
+.card_identifier {
 	width: 100%;
 	max-width: 17px;
 	height: 100%;
 
 	border-radius: 5px 0 0 5px;
+}
+
+.card_identifier_color_Offer {
+	background-color: #9B51E0;
+}
+
+.card_identifier_color_Requests {
+	background-color: #2D9CDB;
+}
+
+.card_identifier_color_News {
+	background-color: #F2994A;
+}
+
+.card_identifier_color_Company {
+	background-color: #27AE60;
 }
 
 .icon {
@@ -69,13 +85,13 @@
 	background-size: contain;
 }
 
-.cardLockIcon {
+.card_lockIcon {
 	composes: icon;
 
 	background-image: url("../../images/lock-icon.svg");
 }
 
-.cardUnlockIcon {
+.card_unlockIcon {
 	composes: icon;
 
 	background-image: url("../../images/unlock-icon.svg");
