--- a/frontend/components/Pagination/Pagination.module.css
+++ b/frontend/components/Pagination/Pagination.module.css
@@ -11,7 +11,7 @@
 	gap: 0 5px;
 }
 
-.paginationButton {
+.pagination__button {
 	width: 100%;
 	max-width: 77px;
 	padding: 3px 10px 2px 0;
@@ -22,7 +22,7 @@
 	background-color: #D1D3D8;
 }
 
-.paginationList {
+.pagination__list {
 	display: flex;
 
 	margin: 0;
@@ -32,7 +32,7 @@
 	gap: 0 5px;
 }
 
-.paginationItem {
+.pagination__item {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -45,10 +45,16 @@
 	background-color: #D1D3D8;
 }
 
-.paginationButton:first-of-type {
+.pagination__item_active {
+	composes: pagination__item;
+	background-color: #182339;
+	color: #FEFEFE;
+}
+
+.pagination__button:first-of-type {
 	border-radius: 5px 0 0 5px;
 }
 
-.paginationButton:last-of-type {
+.pagination__button:last-of-type {
 	border-radius: 0 5px 5px 0;
 }
