--- a/frontend/components/CompanyCard/CompanyCard.module.css
+++ b/frontend/components/CompanyCard/CompanyCard.module.css
@@ -5,143 +5,13 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  padding: 45px 0 0 0 ;
+  padding: 45px 0 ;
   gap: 35px 0;
 }
 
-.company__mainInfo {
-  max-width: 922px;
-  width: 100%;
-  background-color: var(--grey-100);
-  border: 1px solid var(--accent-blue-200);
-  border-radius: 10px;
-  box-sizing: border-box;
-  padding: 70px 96px;
-  display: grid;
-  gap: 30px 15px;
-  grid-template-columns: 70px 1fr;
-  grid-template-areas: 
-  'logo name'
-  'description description';
-  box-shadow: 0px 5px 21px 1px rgba(66, 61, 58, 0.18);
-}
-
-.company__nameWrapper {
-  grid-area: name;
-}
-
-.company__name {
-  grid-area: title;
-  margin: 0;
-  font-family: var(--RobotoSlab);
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 40px;
-  color: var(--grey-600);
-}
-
-.company__geo {
-  background-color: var(--grey-300);
+.company__controls {
   display: flex;
-  width: fit-content;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 5px 10px;
-  border-radius: 5px;
-  position: relative;
-  margin: 5px 0 0 0;
-}
-
-.company__geo::before {
-  content: "";
-  background-image: url("../../images/geo-point.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 12px;
-  height: 15px;
-}
-
-.company__geoText {
-  margin: 0 0 0 10px;
-  font-family: var(--TTNorms);
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  color: var(--grey-600);
-}
-
-.company__logo {
-  grid-area: logo;
-}
-
-.company__description {
-  grid-area: description;
-  margin: 0;
-  font-family: var(--TTNorms);
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 26px;
-  color: var(--grey-600);
-}
-
-.info {
- max-width: 922px;
   width: 100%;
-  background-color: var(--grey-100);
-  border: 1px solid var(--accent-blue-200);
-  border-radius: 10px;
-  box-sizing: border-box;
-  padding: 70px 96px;
-  box-shadow: 0px 5px 21px 1px rgba(66, 61, 58, 0.18);
-}
-
-.info__list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-}
-
-.info__item {
-display: flex;
-align-items: center;
-box-sizing: border-box;
-padding: 15px 0;
-min-height: 75px;
-gap: 0 75px;
-border-bottom: 1px solid var(--grey-400);
-}
-
-.info__field {
-margin: 0;
-  font-family: var(--TTNorms);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  color: var(--grey-500);
-  max-width: 301px;
-  width: 100%;
-}
-
-.info__value {
-margin: 0;
-  font-family: var(--TTNorms);
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 26px;
-  color: var(--grey-600);
-  max-width: 356px;
-  width: 100%;
-}
-
-.info__title {
-  margin: 0;
-  font-family: var(--RobotoSlab);
-  font-weight: 500;
-  font-size: 21px;
-  line-height: 27px;
-  color: var(--grey-600);
+  justify-content: end;
+  
 }
