feat: add new backend services, correct some texts/menus

--- a/frontend/components/LoginForm/LoginForm.module.css
+++ b/frontend/components/LoginForm/LoginForm.module.css
@@ -47,6 +47,10 @@
 	font-size: 16px;
 }
 
+.loginForm__link_forgotPass {
+	align-self: flex-end;
+}
+
 .loginForm__errorMessage {
 	margin: 5px 0;
 
