--- a/frontend/components/CompaniesDashboard/CompaniesDashboard.module.css
+++ b/frontend/components/CompaniesDashboard/CompaniesDashboard.module.css
@@ -86,3 +86,9 @@
 	font-family: var(--TTNorms);
 	font-size: 16px;
 }
+
+.companiesDashboard__companiesList {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
