--- a/frontend/components/CompanyCard/CompanyCard.module.css
+++ b/frontend/components/CompanyCard/CompanyCard.module.css
@@ -1,17 +1,30 @@
 .company {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  padding: 45px 0 ;
-  gap: 35px 0;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
+	padding: 45px 0;
+	gap: 35px 0;
 }
 
 .company__controls {
-  display: flex;
-  width: 100%;
-  justify-content: end;
-  
+	display: flex;
+	justify-content: end;
+
+	width: 100%;
+	max-width: 922px;
+	gap: 0 20px;
+}
+
+.company__button {
+	width: 100%;
+	max-width: 230px;
+	padding: 10px 30px;
+
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 26px;
 }
