--- a/frontend/components/ModalOverlay/ModalOverlay.module.css
+++ b/frontend/components/ModalOverlay/ModalOverlay.module.css
@@ -1,9 +1,9 @@
 .modalOverlay {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-
+	z-index: 1;
 	background-color: rgb(0 0 0 / 60%);
 }
