--- a/frontend/components/RejectForm/RejectForm.module.css
+++ b/frontend/components/RejectForm/RejectForm.module.css
@@ -1,28 +1,29 @@
 .form {
-  display: grid;
-  max-width: 393px;
-  width: 100vw;
+	display: grid;
+
+	width: 100vw;
+	max-width: 393px;
 }
 
 .form__title {
-  margin: 0 0 35px 0;
+	margin: 0 0 35px;
 }
 
 .form__textarea {
-  max-width: 356px;
-  width: 100%;
+	width: 100%;
+	max-width: 356px;
 	height: 116px;
 
 	resize: none;
 }
 
 .form__controls {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  max-width: 260px;
-  width: 100%;
-  gap: 0 10px;
-  margin: 55px 0 0 0;
-  justify-self: end;
-}
+	display: grid;
 
+	width: 100%;
+	max-width: 260px;
+	margin: 55px 0 0;
+	grid-template-columns: 1fr 1fr;
+	gap: 0 10px;
+	justify-self: end;
+}
