--- a/frontend/components/ProfileMenu/ProfileMenu.module.css
+++ b/frontend/components/ProfileMenu/ProfileMenu.module.css
@@ -7,42 +7,69 @@
 	box-shadow: 0 5px 21px 1px rgb(66 61 58 / 18%);
 }
 
-.profileMenu__user {
-	display: flex;
+.container {
 	align-items: center;
 
 	box-sizing: border-box;
 	padding: 20px 20px 10px;
 
 	border-bottom: 1px solid var(--grey-400);
-	gap: 14px;
+	gap: 0 10px;
 }
 
+.profileMenu__user {
+	composes: container;
+	display: flex;
+}
+
+.profileMenu__admin {
+	composes: container;
+	display: grid;
+	grid-template-columns: 40px 1fr;
+	grid-template-areas: 
+	'img name'
+	'img role';
+}
+
+
 .profileMenu__userImg {
+	grid-area: img;
+
 	position: relative;
 
 	overflow: hidden;
 
 	width: 40px;
 	height: 40px;
-
+	
 	border-radius: 50%;
 }
 
 .profileMenu__userName {
+	grid-area: name;
+
 	margin: 0;
-
+	
 	color: var(--grey-600);
-
+	
 	font-family: var(--TTNorms);
 	font-size: 16px;
 	line-height: 1.24;
 }
 
+.profileMenu__userRole {
+	grid-area: role;
+	font-family: var(--TTNorms);
+	font-size: 12px;
+	line-height: 1.16;
+	color: var(--grey-500);
+
+}
+
 .profileMenu__navLinks {
 	display: flex;
 	flex-direction: column;
-
+	
 	box-sizing: border-box;
 	margin: 0;
 	padding: 24px 20px 40px;
