--- a/frontend/pages/catalog/companies/Catalog.module.css
+++ b/frontend/pages/catalog/companies/Catalog.module.css
@@ -2,15 +2,36 @@
   background-color: var(--grey-200);
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
 }
 
 .content {
   flex: 1;
+  max-width: 1440px;
+  padding: 0 40px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  gap: 39px 109px;
+  grid-template-areas:
+  'searchBar searchBar'
+  'filtersBar catalog';
 }
 
 .content__searchBar {
-  margin: 0 0 24px 0;
+  grid-area: searchBar;
+  display: grid;
+  gap: 20px 0;
+}
+
+.content__filtersBar {
+  grid-area: filtersBar;
+}
+
+.catalog {
+  grid-area: catalog;
 }
 
 .nav {
