--- a/frontend/components/Filter/Filter.module.css
+++ b/frontend/components/Filter/Filter.module.css
@@ -15,11 +15,25 @@
 	align-items: flex-start;
 	flex-direction: column;
 
-	margin: 0 0 20px;
+	margin: 0 0 5px;
 	gap: 10px 0;
 }
 
 .filter__checkbox > input {
 	width: 15px;
 	height: 15px;
+}
+
+.filter__expandButton {
+	border: none;
+	background-color: inherit;
+	cursor: pointer;
+	margin: 0;
+	padding: 0;
+	font-family: var(--TTNorms);
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 14px;
+	color: var(--link);
 }
