--- a/frontend/components/Catalog/Catalog.module.css
+++ b/frontend/components/Catalog/Catalog.module.css
@@ -1,38 +1,43 @@
 .catalog {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 709px;
-  width: 100%;
-  gap: 45px 0;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+
+	width: 100%;
+	max-width: 709px;
+	min-height: 742px;
+	gap: 45px 0;
 }
 
 .catalog__itemsList {
-  margin: 0;
-  padding: 0;
-  display: grid;
-  align-content: start;
-  width: 100%;
-  gap: 20px;
-  grid-template-columns: repeat(auto-fill,minmax(223px,1fr));
+	display: grid;
+	align-content: start;
+
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	gap: 20px;
+	grid-template-columns: repeat(auto-fill, minmax(223px, 1fr));
 }
 
 .catalog__moreButton {
-  box-sizing: border-box;
-  cursor: pointer;
-  border: none;
-  background-color: inherit;
-  margin: 0;
-  padding: 0 25px 0 0;
-  background-image: url(../../images/button-arrow-grey.svg);
-  background-repeat: no-repeat;
-  background-position: top 0 right 5px;
-  background-size: contain;
-  font-family: var(--TTNorms);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  color: var(--grey-600);
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0 25px 0 0;
+
+	cursor: pointer;
+
+	color: var(--grey-600);
+	border: none;
+	background-color: inherit;
+	background-image: url("../../images/button-arrow-grey.svg");
+	background-repeat: no-repeat;
+	background-position: top 0 right 5px;
+	background-size: contain;
+
+	font-family: var(--TTNorms);
+	font-size: 14px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 17px;
 }
