--- a/frontend/components/NavMenu/NavMenu.module.css
+++ b/frontend/components/NavMenu/NavMenu.module.css
@@ -11,12 +11,12 @@
 .navMenu__link {
 	transition: color 0.3s ease-in;
 
-	color: #2B2B2B;
+	color: var(--grey-600);
 
-	font-family: RobotoSlab, Arial, sans-serif;
-	font-size: 22px;
+	font-family: var(--TTNorms);
+	font-size: 20px;
 	font-weight: 400;
-	line-height: 1.54;
+	line-height: 26px;
 }
 
 .navMenu__link:hover {
