--- a/frontend/pages/catalog/companies/CatalogPage.module.css
+++ b/frontend/pages/catalog/companies/CatalogPage.module.css
@@ -1,64 +1,74 @@
 .page {
-  background-color: var(--grey-200);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+
+	min-height: 100vh;
+
+	background-color: var(--grey-200);
 }
 
 .content {
-  flex: 1;
-  max-width: 1440px;
-  padding: 0 40px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 200px 1fr;
-  gap: 39px 109px;
-  grid-template-areas:
-  'searchBar searchBar'
-  'filtersBar catalog';
+	display: grid;
+	flex: 1;
+
+	width: 100%;
+	max-width: 1440px;
+	padding: 0 40px 72px;
+	grid-template-columns: 200px 1fr;
+	gap: 39px 109px;
+	grid-template-areas:
+		"searchBar searchBar"
+		"filtersBar catalog";
 }
 
 .content__searchBar {
-  grid-area: searchBar;
-  display: grid;
-  gap: 20px 0;
+	grid-area: searchBar;
+
+	display: grid;
+	gap: 20px 0;
 }
 
 .content__filtersBar {
-  grid-area: filtersBar;
-  display: grid;
-  gap: 40px 0;
-  align-content: start;
+	grid-area: filtersBar;
+
+	display: grid;
+	gap: 40px 0;
+
+	align-content: start;
 }
 
 .content__catalog {
-  grid-area: catalog;
+	grid-area: catalog;
 }
 
 .content__nav {
-  display: flex;
-  list-style-type: none;
-  gap: 0 10px;
-  margin: 0;
-  padding: 0;
+	display: flex;
+
+	margin: 0;
+	padding: 0;
+
+	list-style-type: none;
+	gap: 0 10px;
 }
 
 .nav__link {
-  font-family: var(-TTNorms);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  display: block;
-  padding: 3px 15px;
-  border: 1px solid var(--grey-400);
-  background: var(--grey-300);
-  border-radius: 10px;
+	display: block;
+
+	padding: 3px 15px;
+
+	border: 1px solid var(--grey-400);
+	border-radius: 10px;
+	background: var(--grey-300);
+
+	font-family: var(-TTNorms);
+	font-size: 14px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 17px;
 }
 
 .nav__link_active {
-  border: 1px solid var(--accent-blue-400);
+	border: 1px solid var(--accent-blue-400);
 }
-
