--- a/frontend/components/CatalogCompanyPreview/CatalogCompanyPreview.module.css
+++ b/frontend/components/CatalogCompanyPreview/CatalogCompanyPreview.module.css
@@ -27,7 +27,6 @@
 
 	color: var(--grey-600);
 
-	font-family: var(--RobotoSlab);
 	font-size: 17px;
 	font-weight: 500;
 	font-style: normal;
@@ -72,7 +71,8 @@
 }
 
 .card__description {
-	display: box;
+	display: -webkit-box;
+
 	overflow: hidden;
 
 	max-width: 183px;
