--- a/frontend/components/CompaniesCatalog/CompaniesCatalog.module.css
+++ b/frontend/components/CompaniesCatalog/CompaniesCatalog.module.css
@@ -12,7 +12,7 @@
 .catalog__itemsList {
 	display: grid;
 	align-content: start;
-
+	list-style-type: none;
 	width: 100%;
 	margin: 0;
 	padding: 0;
