--- a/frontend/pages/catalog/companies/CatalogPage.module.css
+++ b/frontend/pages/catalog/companies/CatalogPage.module.css
@@ -40,18 +40,20 @@
 }
 
 .content__filtersControls {
-	box-sizing: border-box;
-	padding: 10px 0 0 0;
 	display: flex;
-	gap: 0 5px
+
+	box-sizing: border-box;
+	padding: 10px 0 0;
+	gap: 0 5px;
 }
 
 .content__filtersButton {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 16px;
 	padding: 6px 10px;
+
+	font-size: 14px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 16px;
 }
 
 .content__catalog {
