--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,6 +1,6 @@
-@import url("../vendor/normalize.css");
-@import url("../vendor/fonts/fonts.css");
-@import url("./constants.css");
+@import "../vendor/normalize.css";
+@import "../vendor/fonts/fonts.css";
+@import "./constants.css";
 
 html,
 body {
