--- a/frontend/pages/admin/directory/DirectoryPage.module.css
+++ b/frontend/pages/admin/directory/DirectoryPage.module.css
@@ -1,4 +1,4 @@
-.content__nav {
+.controls__nav {
 	display: flex;
 
 	margin: 0;
@@ -8,7 +8,7 @@
 	gap: 0 10px;
 }
 
-.nav__link {
+.controls__link {
 	display: block;
 
 	padding: 3px 15px;
@@ -24,11 +24,11 @@
 	line-height: 17px;
 }
 
-.nav__addBtn {
-  composes: nav__link
+.controls__addBtn {
+  composes: controls__link
 }
 
-.nav__link_active {
+.controls__link_active {
 	border: 1px solid var(--accent-blue-400);
 }
 
@@ -83,9 +83,50 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-	/* color: var(--accent-red-400); */
 	border: none;
-	/* border-radius: 0 10px 10px 0; */
 	background-color: transparent;
-	/* composes: text; */
+}
+
+.directory {
+  max-width: 298px;
+  width: 100%;
+  background-color: var(--grey-100);
+  display: flex;
+  flex-direction: column;
+
+}
+
+.btn {
+
+}
+
+.directory__columnName {
+
+}
+
+.directory__list {
+
+}
+
+.directory__item {
+
+}
+
+.directory__itemControls {
+
+}
+
+.directory__controlButton {
+
+}
+.directory__newItem {
+
+}
+
+.directory__addField {
+
+}
+
+.directory__addBtn {
+  
 }
