fix: cards  max-height

--- a/frontend/components/Directory/Directory.module.css
+++ b/frontend/components/Directory/Directory.module.css
@@ -9,6 +9,8 @@
 
 .directory {
   max-width: 298px;
+	height: 420px;
+	overflow-y: auto;
   width: 100%;
   background-color: var(--grey-100);
   display: flex;
