--- a/frontend/components/Directory/Directory.module.css
+++ b/frontend/components/Directory/Directory.module.css
@@ -1,40 +1,59 @@
 .text {
-	font-family: var(--TTNorms);
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 20px;
 	margin: 0;
+
+	font-family: var(--TTNorms);
+	font-size: 16px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 20px;
 }
 
 .directory {
-  max-width: 298px;
-	height: 420px;
+	display: flex;
 	overflow-y: auto;
-  width: 100%;
-  background-color: var(--grey-100);
-  display: flex;
-  flex-direction: column;
+	flex-direction: column;
+
+	width: 100%;
+	max-width: 298px;
+	height: 420px;
 	padding: 20px 16px 28px;
+
 	border-radius: 10px;
+	background-color: var(--grey-100);
 }
 
 .directory__columns {
-	composes: text;
-	color: var(--grey-500);
-	margin: 0 0 10px 0;
 	display: flex;
 	justify-content: space-between;
+
+	margin: 0 0 10px;
+
+	color: var(--grey-500);
+	composes: text;
 }
 
 .directory__list {
-	width: 100%;
-	margin: 0;
-	padding: 22px 0 0 0;
-	border-top: 1px solid var(--grey-500);
-
-	list-style-type: none;
 	display: flex;
 	flex-direction: column;
-	gap: 5px 0
+
+	width: 100%;
+	margin: 0;
+	padding: 22px 0 0;
+
+	list-style-type: none;
+
+	border-top: 1px solid var(--grey-500);
+	gap: 5px 0;
+}
+
+.directory::-webkit-scrollbar {
+	width: 8px;
+}
+
+.directory::-webkit-scrollbar-thumb {
+	background-color: var(--grey-400);
+}
+
+.directory::-webkit-scrollbar-track {
+	background-color: var(--grey-300);
 }
