--- a/frontend/components/Directory/components/DirectoryItem/DirectoryItem.module.css
+++ b/frontend/components/Directory/components/DirectoryItem/DirectoryItem.module.css
@@ -1,32 +1,38 @@
 .item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  padding: 0 10px 0 0;
-  max-width: 266px;
-  max-height: 28px;
-  width: 100%;
-  height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	box-sizing: border-box;
+	width: 100%;
+	max-width: 266px;
+	height: 100vh;
+	max-height: 28px;
+	padding: 0 10px 0 0;
 }
 
 .item__value {
-  font-family: var(--TTNorms);
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 20px;
+	overflow: hidden;
+
+	max-width: 200px;
 	margin: 0;
-  max-width: 200px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+
+	text-overflow: ellipsis;
+
+	font-family: var(--TTNorms);
+	font-size: 16px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 20px;
 }
 
 .item__editBtn {
-  box-sizing: border-box;
-	border: none;
-	cursor: pointer;
-	background-color: transparent;
-	padding:  4px 4px;
+	box-sizing: border-box;
 	margin: 0;
+	padding: 4px;
+
+	cursor: pointer;
+
+	border: none;
+	background-color: transparent;
 }
