--- a/frontend/components/Directory/components/EditForm/EditForm.module.css
+++ b/frontend/components/Directory/components/EditForm/EditForm.module.css
@@ -1,24 +1,27 @@
 .form {
 	position: relative;
+
 	width: 100%;
 }
 
 .text {
-	font-family: var(--TTNorms);
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 20px;
 	margin: 0;
+
+	font-family: var(--TTNorms);
+	font-size: 16px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 20px;
 }
 
 .form__input {
+	width: 100%;
+	height: 28px;
+	padding: 0 50px 0 10px;
+
+	border: none;
 	background-color: transparent;
 	composes: text;
-	height: 28px;
-	width: 100%;
-	border: none;
-	padding: 0 40px 0 10px;
 }
 
 .form__input:focus {
@@ -29,16 +32,33 @@
 
 .form__input::placeholder {
 	text-align: center;
+
 	color: var(--accent-red-300);
 }
 
-.form__submitBtn {
-	cursor: pointer;
+.form__controls {
 	position: absolute;
-	right: 0px;
+	top: 0;
+	right: 10px;
+
+	display: flex;
+	align-items: center;
+
+	height: 28px;
+	gap: 0 5px;
+}
+
+.form__btn {
 	top: 4px;
+
+	width: 15px;
+	height: 15px;
+	padding: 0;
+
+	cursor: pointer;
+
+	color: var(--accent-red-300);
 	border: none;
 	background-color: transparent;
 	composes: text;
-	color: var(--accent-red-300);
 }
