--- a/frontend/components/NewCompanyForm/NewCompanyForm.module.css
+++ b/frontend/components/NewCompanyForm/NewCompanyForm.module.css
@@ -62,7 +62,7 @@ textarea.newCompanyForm__textarea {
 
 .newCompanyForm__buttons {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	gap: 15px;
 }
 
