--- a/frontend/components/CatalogCompanyPreview/CatalogCompanyPreview.module.css
+++ b/frontend/components/CatalogCompanyPreview/CatalogCompanyPreview.module.css
@@ -6,7 +6,9 @@
 	max-width: 223px;
 	min-height: 224px;
 	padding: 20px;
+
 	cursor: pointer;
+
 	border: 1px solid var(--accent-blue-200);
 	border-radius: 10px;
 	background-color: var(--grey-100);
@@ -40,7 +42,7 @@
 
 	display: flex;
 	align-items: center;
-	
+
 	box-sizing: border-box;
 	width: fit-content;
 	margin: 12px 0 15px;
@@ -72,7 +74,9 @@
 }
 
 .card__description {
-	display: box;
+	/* stylelint-disable */
+	display: -webkit-box;
+  /* stylelint-enable */
 
 	overflow: hidden;
 
