--- a/frontend/components/OfferCard/OfferCard.module.css
+++ b/frontend/components/OfferCard/OfferCard.module.css
@@ -1,54 +1,60 @@
 .offer {
-  max-width: 922px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+
+	max-width: 922px;
 }
 
 .offer__container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0 0 100px 0;
+	display: flex;
+	flex-direction: column;
+
+	box-sizing: border-box;
+	width: 100%;
+	padding: 0 0 100px;
 }
 
 .offer__contentControls {
-  display: flex;
-  max-width: 908px;
-  width: 100%;
-  border-bottom: 1px solid var(--grey-400);
-  box-sizing: border-box;
-  margin: 0 0 45px 0;
+	display: flex;
+
+	box-sizing: border-box;
+	width: 100%;
+	max-width: 908px;
+	margin: 0 0 45px;
+
+	border-bottom: 1px solid var(--grey-400);
 }
 
 .offer__showContentBtn {
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  max-width: 454px;
-  height: 44px;
-  font-family: var(--RobotoSlab);
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  text-align: center;
-  vertical-align: middle;
-  color: var(--grey-600);
+	width: 100%;
+	max-width: 454px;
+	height: 44px;
+	margin: 0;
+	padding: 0;
+
+	cursor: pointer;
+	text-align: center;
+	vertical-align: middle;
+
+	color: var(--grey-600);
+	border: none;
+	background-color: transparent;
+
+	font-family: var(--RobotoSlab);
+	font-size: 14px;
+	font-weight: 500;
+	font-style: normal;
+	line-height: 17px;
 }
 
 .offer__showContentBtn_active {
-  border-bottom: 2px solid var(--accent-red-300);
-  color: var(--accent-red-300);
+	color: var(--accent-red-300);
+	border-bottom: 2px solid var(--accent-red-300);
 }
 
-
 .offer__moderationControls {
-  display: flex;
+	display: flex;
 	justify-content: flex-end;
 
 	width: 100%;
@@ -57,7 +63,7 @@
 }
 
 .offer__moderationBtn {
-  width: 100%;
+	width: 100%;
 	max-width: 230px;
 	padding: 10px 30px;
 
