feat: add reject message

--- a/frontend/styles/constants.css
+++ b/frontend/styles/constants.css
@@ -41,7 +41,7 @@
 
 	/* service colors */
 	--attention-strong: #E63636;
-	--attention-weak: #F17C7C;
+	--attention-weak: #FFD3D3;
 	--alerts-positive: #D5F6D5;
 	--link: #0340DF;
 	--link-hover: #001E6C;
