--- a/frontend/components/CatalogOfferPreview/CatalogOfferPreview.module.css
+++ b/frontend/components/CatalogOfferPreview/CatalogOfferPreview.module.css
@@ -1,69 +1,73 @@
 .card {
-	display: grid;
-
+	display: flex;
+	flex-direction: column;
 	box-sizing: border-box;
 	width: 100%;
 	max-width: 223px;
-	min-height: 224px;
+	min-height: 337px;
 
 	cursor: pointer;
 
 	border: 1px solid var(--accent-blue-200);
 	border-radius: 10px;
 	background-color: var(--grey-100);
-	gap: 0 10px;
+}
+
+.text {
+	margin: 0;
+
+	font-size: 14px;
+	font-weight: 500;
+	font-style: normal;
+	line-height: 17px;
+	word-wrap: break-word;
+	max-width: 192px;
+	width: 100%;
 }
 
 .card__image {
   border-radius: 9px 9px 0 0;
 }
 
-.card__textContainer {
+.card__textContent {
+	box-sizing: border-box;
   display: grid;
-  grid-template-areas: 
-  'title .'
-  'price .'
-  'description .'
-  'link icon';
-  grid-template-columns: 173px 20px;
+	grid-template-columns: 173px 20px;
+	grid-template-areas: 
+	'title title'
+	'price price'
+	'description description'
+	'link icon';
+	gap: 10px 0;
   padding: 15px;
 }
 
 .card__title {
-  grid-area: title;
-	margin: 0;
-
-	color: var(--grey-600);
-
-	font-size: 14px;
-	font-weight: 500;
-	font-style: normal;
-	line-height: 17px;
+	/* Ограничить высоту названия товара? */
+	grid-area: title;
+	composes: text;
 }
 
 .card__price {
-  grid-area: price;
+	grid-area: price;
+	margin: 0;
   font-family: var(--RobotoSlab);
   color: var(--accent-red-400);
 
-	font-size: 14px;
-	font-weight: 500;
-	font-style: normal;
-	line-height: 17px;
+	composes: text;
 }
 
 .card__description {
-  grid-area: description;
+	grid-area: description;
 	/* stylelint-disable */
 	display: -webkit-box;
   /* stylelint-enable */
+	overflow: hidden; 
+	margin: 0 0 8px 0;
 
-	overflow: hidden;
-
-	max-width: 183px;
+	max-width: 193px;
 	max-height: 40px;
-	margin: 0 0 15px;
-
+	width: 100%;
 	color: var(--grey-600);
 
 	font-family: var(--TTNorms);
@@ -71,12 +75,12 @@
 	font-weight: 400;
 	font-style: normal;
 	line-height: 20px;
-	grid-area: description;
 	-webkit-line-clamp: 2;
-	-webkit-box-orient: vertical;
+	-webkit-box-orient: vertical; 
 }
+
 .card__link {
-  grid-area: link;
+	grid-area: link;
 	transition: 0.3s;
 
 	color: var(--link);
@@ -86,10 +90,16 @@
 	font-weight: 400;
 	font-style: normal;
 	line-height: 14px;
+	max-width: 170px;
+	overflow: hidden;
+	text-overflow: ellipsis;
   width: fit-content;
 }
 
 .card__link:hover {
-  grid-area: icon;
 	color: var(--link-hover);
+}
+
+.card__flagIcon {
+	grid-area: icon;
 }
